--- a/config/config.json
+++ b/config/config.json
@@ -1,24 +1,27 @@
 {
     "development": {
-      "username": "root",
-      "password": null,
-      "database": "database_development",
-      "dialect": "sqlite",
-      "storage": "./main.sqlite"
+      "username": "roaa",
+      "password": 123,
+      "database": "ticket_system",
+      "dialect": "postgresql",
+      "host": "db",
+      "port": 5432
     },
     "test": {
-      "username": "root",
-      "password": null,
-      "database": "database_test",
-      "dialect": "sqlite",
-      "storage": "./main.sqlite"
+      "username": "roaa",
+      "password": 123,
+      "database": "ticket_system",
+      "dialect": "postgresql",
+      "host": "db",
+      "port": 5432
     },
     "production": {
-      "username": "root",
-      "password": null,
-      "database": "database_production",
-      "dialect": "sqlite",
-      "storage": "./main.sqlite"
+      "username": "roaa",
+      "password": 123,
+      "database": "ticket_system",
+      "dialect": "postgresql",
+      "host": "db",
+      "port": 5432
     }
   }
   
