--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - db
   db:
     image: postgres:13
+    ports:
+      - 5432:5432
     environment:
       - POSTGRES_USER=roaa
       - POSTGRES_PASSWORD=123
