--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,7 @@
       "password": 123,
       "database": "ticket_system",
       "dialect": "postgresql",
-      "host": "db",
+      "host": "localhost",
       "port": 5432
     },
     "test": {
@@ -12,7 +12,7 @@
       "password": 123,
       "database": "ticket_system",
       "dialect": "postgresql",
-      "host": "db",
+      "host": "localhost",
       "port": 5432
     },
     "production": {
@@ -20,7 +20,7 @@
       "password": 123,
       "database": "ticket_system",
       "dialect": "postgresql",
-      "host": "db",
+      "host": "localhost",
       "port": 5432
     }
   }
