adds login to the website

--- a/config/config.json
+++ b/config/config.json
@@ -3,25 +3,34 @@
       "username": "roaa",
       "password": 123,
       "database": "ticket_system",
-      "dialect": "postgresql",
-      "host": "localhost",
-      "port": 5432
+      "dialect": "postgres",
+      "host": "db",
+      "port": 5432,
+      "jwt": {
+        "secret": "secret"
+      }
     },
     "test": {
       "username": "roaa",
       "password": 123,
       "database": "ticket_system",
-      "dialect": "postgresql",
-      "host": "localhost",
-      "port": 5432
+      "dialect": "postgres",
+      "host": "db",
+      "port": 5432,
+      "jwt": {
+        "secret": "secret"
+      }
     },
     "production": {
       "username": "roaa",
       "password": 123,
       "database": "ticket_system",
-      "dialect": "postgresql",
-      "host": "localhost",
-      "port": 5432
+      "dialect": "postgres",
+      "host": "db",
+      "port": 5432,
+      "jwt": {
+        "secret": "secret"
+      }
     }
   }
   
