--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,7 @@
       "password": 123,
       "database": "ticket_system",
       "dialect": "postgres",
-      "host": "db",
+      "host": "localhost",
       "port": 5432,
       "jwt": {
         "secret": "secret"
@@ -15,7 +15,7 @@
       "password": 123,
       "database": "ticket_system",
       "dialect": "postgres",
-      "host": "db",
+      "host": "localhost",
       "port": 5432,
       "jwt": {
         "secret": "secret"
@@ -26,7 +26,7 @@
       "password": 123,
       "database": "ticket_system",
       "dialect": "postgres",
-      "host": "db",
+      "host": "localhost",
       "port": 5432,
       "jwt": {
         "secret": "secret"
