--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "morgan": "~1.9.1",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3",
