--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "db:seed": "sequelize db:seed:all --env development"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.19.2",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
+    "node-cron": "^3.0.3",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
